--- a/resume/style.css
+++ b/resume/style.css
@@ -7,50 +7,102 @@ font-size: 1em;
 color: #444;
 
 }
+
+/*applied to whole page */
+#container {
+  width: 100%;
+  max-width: 1200px;
+  margin: 0 auto;
+  padding-bottom: 50px;
+}
+
+
 /*name at top*/
-h1{
+#name{
 
 color: #33485e;
 font-size: 3em;
 text-align: center;
 text-transform: uppercase;
+width: 60%;
+min-width: 300px;
+border-bottom: 1px solid #33485e;
+margin: 0 auto;
 
 }
 /*position title*/
-strong{
+#title{
   color: #33485e;
   font-size: 1.5em;
   text-transform: uppercase;
+  font-weight:600px;
+  text-align: center;
+  margin-top: 20px;
+
 }
 
 /*section titles*/
-h2{
+.sectionheader{
   font-size: 1.5em;
   text-transform: uppercase;
   background-color: #33485e;
   color: #FFF;
+  margin-bottom: 10px;
+  margin-top: 20px;
+  width: 70%;
+  min-width: 300px;
 }
 
 /*job titles*/
-h3{
+.jobtitle{
   font-weight: 600;
   font-size: 1.5em;
 }
 
 /*job organization*/
-h4{
+.organization{
   font-weight: 500;
-  font-size: 1.5em;
+  font-size: 1.25em;
 }
 
 /*dates held*/
-h5{
+.date{
   font-weight: 600;
   font-size: 1em;
   font-style: italic;
+  margin-top: 2px;
+}
+
+.description{
+  margin-top:10px;
+  margin-bottom: 10px;
 }
 
 /*education and skills lists*/
 li {
   font-size: 1em;
+
+}
+
+.menu {
+  margin: 0px;
+  padding: 0px;
+  text-align: center;
+  display: inline;
+  list-style-type: none;
+}
+
+#degrees {
+  margin-top: 5px;
+}
+
+#do {
+  margin-top: 5px;
+}
+
+.top{
+  width: 60%;
+  min-width: 300px;
+  margin: 0 auto;
+  margin-bottom: 30px;
 }
