--- a/resume/style.css
+++ b/resume/style.css
@@ -85,9 +85,9 @@ li {
 }
 
 .menu {
-  margin: 0px;
+  margin: 0px ;
   padding: 0px;
-  text-align: center;
+  margin: 0 auto;
   display: inline;
   list-style-type: none;
 }
