--- a/Online Resume/style.css
+++ b/Online Resume/style.css
@@ -8,3 +8,27 @@
     width: 100%;
   }
 }
+
+.image{
+  width:800px
+}
+
+@media screen and (max-width: 800px) {
+
+  .image{
+    width: 100%;
+  }
+}
+}
+
+p{
+margin: 0 auto;
+}
+
+.title{
+text-align: center;
+}
+
+.space{
+  padding-top: 50px;
+}
