--- a/onlineresume/style.css
+++ b/onlineresume/style.css
@@ -10,7 +10,8 @@
 }
 
 .image{
-  width:800px
+  width:800px;
+  padding: 50px;
 }
 
 @media screen and (max-width: 800px) {
@@ -25,10 +26,100 @@ p{
 margin: 0 auto;
 }
 
-.title{
-text-align: center;
+.heading{
+  text-align: center;
+  font-family: Raleway, sans-serif;
+  color: #FF6F5C ;
+  font-size: 50px;
+  margin: 10px;
+  padding: 10px;
+
 }
+
+.title{
+  text-align: center;
+  padding: 20px;
+  margin: 20px;
+  font-family: Raleway, sans-serif;
+  color: #FF6F5C
+
+}
+
 
 .space{
   padding-top: 50px;
+}
+
+body {
+  font-family: Lato, sans-serif;
+}
+
+.list{
+  list-style-type: none;
+  display: inline-inline-block;
+  font-size: 16px;
+
+
+}
+
+.subtitle{
+  color:#FFAB5C;
+}
+
+.background{
+  background: #F5D7C8;
+}
+.navbar-default {
+    background-color: #F5D7C8;
+    border-color: #E7E7E7;
+}
+
+.footer{
+  background-color: #F5D7C8;
+  border-color: #E7E7E7;
+  width: 1600px;
+  height: 30px;
+}
+
+
+
+@media screen and (max-width: 1600px) {
+
+  .footer{
+    width: 100%;
+    text-align: center;
+  }
+}
+
+.image{
+  width:800px;
+  padding: 50px;
+}
+
+@media screen and (max-width: 800px) {
+
+  .image{
+    width: 100%;
+  }
+}
+}
+
+.grey {
+  color: #8C847D;
+}
+
+
+
+
+
+.menu{
+  display: inline;
+  text-align: center;
+  padding-right: 10%;
+  width: auto;
+  margin-right: 0.5%;
+  padding-left: 0;
+  margin-left: 0;
+  padding-top: 10px;
+  padding-bottom: 10px;
 }
