--- a/Final Project GFX/style.css
+++ b/Final Project GFX/style.css
@@ -1,15 +1,18 @@
 h2{
-font-family: 'Oranienbaum', serif;
-font-size: 60px;
-text-align: center;
+font-family: 'Abril Fatface', serif;
+font-size: 40px;
 }
 
 p{
   font-family: 'News Cycle', sans-serif;
-  font-size: 20px;
+  font-size: 16px;
 }
 
 em{
   font-family: 'News Cycle', sans-serif;
   font-size: 14px;
+}
+
+body{
+  background-color: #94BFFF;
 }
