--- a/multimedia-final/style.css
+++ b/multimedia-final/style.css
@@ -1,8 +1,8 @@
 
 
 /*navbar styles*/
-.bg-light {
- background:#ff0000 !important;
+.bg-dark {
+ background:#FF2A1C !important;
 }
 
 ul.navbar-nav {
@@ -11,7 +11,13 @@ ul.navbar-nav {
 
 .navbar {
  font-family: 'Montserrat', sans-serif;
- font-weight: 700;
+ font-weight: 400;
+ font-size: 18px;
+ color: white;
+}
+.nav-link{
+  color:#fff !important;
+  text-align: center;
 }
 
  .star-top{
@@ -19,21 +25,33 @@ ul.navbar-nav {
    margin-left: 5px;
  }
 
+/* scroll image styles*/
+ .bgimage {
+   width:100%;
+   height:500px;
+   background: url('images/vote.jpeg');
+   background-repeat: no-repeat;
+   background-position: center;
+   background-size:cover;
+   background-attachment: fixed;
 
+   @media (max-width: 768px) {
+   background: url('my-mobile-hero-image.jpg') no-repeat center top;
+ }
+ }
 
 /* default and text styles*/
 .headline{
   text-align:center;
-  font-family: 'Montserrat', sans-serif;
+  font-family: 'Lato', sans-serif;
   font-size: 3em;
-  font-weight: 700;
+  font-weight: 300;
+  letter-spacing: -0.05em;
 }
 
-.subhead{
-  text-align:center;
-  font-family: 'Montserrat', sans-serif;
-  font-size: 1.25em;
-  font-weight: 700;
+.headline-container{
+width: 100%;
+text-align: center;
 
 }
 
@@ -61,6 +79,14 @@ p{
 
 .blue {
  color: #0052a5;
+ font-family: 'Lato', sans-serif;
+ font-weight: 700;
+ font-size: 7em;
+ padding-top: 20px;
+ width: 100%;
+ line-height: 130%;
+
+
 }
 
 body{
@@ -69,41 +95,49 @@ body{
 
 .intro-text{
   text-align:center;
-  font-family: 'Montserrat', sans-serif;
+  font-family: 'Lato', sans-serif;
   font-size: 1.25em;
-  font-weight: 700;
+  font-weight: 300;
   max-width: 800px;
   width: 100%;
   margin-top: 25px;
   margin-bottom: 25px;
+  margin:0 auto;
 }
 
-a:Link:#e0162b;
+a:Link:#FFFFFF ;
 a:hover: #0052a5;
-a:visited:#999;
+a:visited:#FFFFFF;
 
 .graphic-container-h2{
   font-size: 2em;
 }
 
 .graphic-container{
-  padding-top:30px;
+padding-top:30px;
 padding-bottom:30px;
-border-top:1px solid #cdcdcd;
-border-bottom:1px solid #cdcdcd;
-font-family: 'Montserrat', sans-serif;
+font-family: 'Lato', sans-serif;
 margin:0 auto;
 }
 
 h2{
-font-family: 'Oranienbaum', serif;
-font-size: 45px;
+font-family: 'Lato', sans-serif;
+font-size: 30px;
 text-align: center;
 }
 
+
 em{
+  width:100%;
+  text-align: center;
   font-family: 'News Cycle', sans-serif;
-  font-size: 14px;
+  font-size: 16px;
+}
+
+.year{
+  font-family: 'Lato', sans-serif;
+  font-size: 20px;
+  text-align: center;
 }
 
 /*image and caption styles*/
@@ -112,15 +146,6 @@ em{
   width: 800px;
   width: 800px;
   margin: 0 auto;
-}
-
-.caption{
-  width:100%;
- max-width:900px;
- margin:0 auto;
- padding-bottom:30px;
- font-family: 'Montserrat', sans-serif;
- color:#999;
 }
 
 .hero-image{
@@ -149,7 +174,7 @@ em{
 }
 
 footer{
-  background-color: black;
+  background-color: #FF2A1C;
   height: 100px;
   padding: 25px;
   color: white;
